@@ -1908,3 +1908,5 @@
 	  before, leaving data in the hardware would cause infinite interrupts
 	  one most MCUs since you must read the data in order to clear the
 	  interrupt.
+	* arch/arm/src/lpc17xx/lpc17_can.c:  Added a CAN driver contributed by Lzyy.
+	* include/stddefs.h and sys/types:  Added type wchar_t.
